podwithresources.yml
----we have assigned resources to a pod while creating
---
apiVersion: v1
kind: Pod
metadata:
  name: pod3
spec:
  containers:
    - name: cont1
      image: nginx
      ports:
        - containerPort: 80

      resources:
        limits:
          cpu: "100m"
          memory: "100Mi"
        requests:
          cpu: "90m"
          memory: "50Mi"
