volumes.yml
---Attaching the volumes for both containers to achieve data persistence and the volume is from EBS
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flm
spec:
  replicas: 2
  selector:
    matchLabels:
      app: swiggy
  template:
    metadata:
      labels:
        app: swiggy
    spec:
      containers:
        - name: cont1
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: "/tmp/jenkins"
              name: devops

        - name: cont2
          image: ubuntu
          command: ["/bin/bash", "-c", "while true; do echo welcome to devops; sleep 10; done"]
          volumeMounts:
            - mountPath: "/opt/docker/"
              name: devops

      volumes:
      - name: devops
        persistentVolumeClaim:
          claimName: pvc1
