Service.yml
---This instructions are for exposing the pod with loadbalancer
apiVersion: v1
kind: Service
metadata:
  name: mysvc
spec:
  type: LoadBalancer
  selector:
    app: zomato
  ports:
    - port: 80
      targetPort: 80
