blue-greendeployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bluedep
spec:
  replicas: 3
  selector:
    matchLabels:
      version: blue
  template:
    metadata:
      labels:
        version: blue
    spec:
      containers:
        - name: cont1
          image: shaikmustafa/dm
          ports:
            - containerPort: 80
======================================================================================================
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greendep
spec:
  replicas: 3
  selector:
    matchLabels:
      version: green
  template:
    metadata:
      labels:
        version: green
    spec:
      containers:
        - name: cont2
          image: shaikmustafa/cycle
          ports:
            - containerPort: 80
===========================================================================================================
---
apiVersion: v1
kind: Service
metadata:
  name: bluegreensvc
spec:
  type: LoadBalancer
  selector:
    version: green
  ports:
    - port: 80
      targetPort: 80
===============================================================================================================

tetris game
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mytetris
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tetris
  template:
    metadata:
      labels:
        app: tetris
    spec:
      containers:
        - name: cont1
          image: shaikmustafa/mytetrisgame:v2
          ports:
            - containerPort: 3000
=======================================================================
tetris game service file
---
apiVersion: v1
kind: Service
metadata:
  name: svc
spec:
  type: LoadBalancer
  selector:
    app: tetris
  ports:
    - port: 80
      targetPort: 3000
