virtual-service.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: reviews

spec:
  hosts:
    - reviews

  http:
    - route:
        - destination:
            host: reviews
            subset: v1
          weight: 50

        - destination:
            host: reviews
            subset: v3
          weight: 50

        - destination:
            host: reviews
            subset: v2
          weight: 50
